# FaceInvaders

./: CMakeLists.txt  faceinvaders.cpp  gameimage.cpp  gameimage.h  graphic.h  invader.cpp  invader.h  player.cpp  player.h  playerposition.cpp  playerposition.h  shot.cpp  shot.h
